# fingerprint_ml

./: README.md  pyproject.toml
src/: EC50.csv  between.ipynb  generateFeature.py  getData.py  index.ipynb  index.py  predictPeptide.py  preprocessing.py  regression.ipynb  result.csv  selectFeature.py  trainModel.py
src/data/: ChEMBL.tsv  EC50.csv  TGR5agonists.tsv  inputData.csv
src/model/: randomForest.pkl  rf.pkl
src/notebook/: between.ipynb
