[project]
name = "sar2"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "yutteee", email = "yusaku_nakamura_aa@icloud.com" }
]
dependencies = [
    "pandas>=2.2.2",
    "rdkit>=2024.3.3",
    "scikit-learn>=1.5.1",
    "matplotlib>=3.9.1",
    "dcekit>=2.14.1",
    "boruta>=0.3",
    "jupyter>=1.0.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ruff>=0.5.4",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/sar2"]
